--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-sillypog",
-  "version": "0.0.0",
-  "description": "A generator for Yeoman",
+  "version": "0.0.1",
+  "description": "Yeoman generator for static sites. jQuery & Sass included.",
   "keywords": [
     "yeoman-generator"
   ],
