--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "underscore.string": "~2.3.3"
   },
   "devDependencies": {
-    "mocha": "~1.12.0"
+    "mocha": "~1.12.0",
+    "mocha-jshint": "0.0.7"
   },
   "peerDependencies": {
     "yo": ">=1.0.0-rc.1"
