--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Yeoman generator for static sites. jQuery & Sass included.",
   "keywords": [
-    "yeoman-generator"
+    "yeoman-generator", "web", "front-end", "scaffold", "sass", "jquery", "grunt-asset-packager"
   ],
   "homepage": "https://github.com/sillypog/generator-sillypog",
   "bugs": "https://github.com/sillypog/generator-sillypog/issues",
